# berry

./: Cargo.toml  README.md
src/: button.rs  components.rs  label.rs  main.rs  picture.rs  rasterizer.rs  resources.rs  systems.rs  text.rs  ui.rs
src/components/: constraints.rs
src/drawing/: mod.rs  text.rs
src/systems/: `  button.rs  drawing.rs  event.rs  layout.rs  shrinkwrap.rs
