[package]
name = "berry"
version = "0.1.0"
authors = ["Schell Scivally <efsubenovex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cassowary = "^0.3.0"
specs = "0.15.1"
specs-derive = "0.4.0"

[dependencies.sdl2]
version = "0.32.0"
default-features = false
features = [ "image", "ttf" ]