[package]
name = "berry"
version = "0.1.0"
authors = ["Schell Scivally <efsubenovex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#cassowary = {git = "https://github.com/schell/cassowary-rs.git", rev = "abff0cc9588f623e74af58c48bbad954f990884e"}
cassowary = { path = "../cassowary-rs" }
specs = "0.15.1"
specs-derive = "0.4.0"

[dependencies.sdl2]
version = "0.32.0"
default-features = false
features = [ "image", "ttf" ]